Fix forced-color on Firefox

--- a/packages/bricks/src/Divider.css
+++ b/packages/bricks/src/Divider.css
@@ -48,5 +48,9 @@
 @media (forced-colors: active) {
 	.🥝Divider {
 		--🥝Divider-background-color: CanvasText;
+
+		&:where([data-_sk-bleed="true"]) {
+			forced-color-adjust: none;
+		}
 	}
 }
